--- a/static/scss/page/search.css
+++ b/static/scss/page/search.css
@@ -350,4 +350,346 @@
 .page .search-results .service:hover .service-image {
   transition: 0.2s;
   filter: brightness(85%);
+}
+
+@media only screen and (min-device-width: 1140px) {
+  .page .search-search {
+    position: absolute;
+    top: 55px;
+    width: 100%;
+    padding-inline: 33px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    text-align: center;
+    border-bottom: 1px solid rgba(40, 40, 40, 0.1);
+    z-index: 10000;
+    background: white;
+  }
+  .page .search-search.sticky {
+    position: fixed;
+    top: 0;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
+  .page .search-search form {
+    border: 1px solid rgb(234, 234, 234);
+    border-radius: 4px;
+    display: flex;
+    max-width: 500px;
+    position: relative;
+  }
+  .page .search-search button {
+    border: none;
+    background: transparent;
+    position: absolute;
+    right: 20px;
+    top: 13px;
+    padding: 3px 8px;
+    margin: -3px -8px;
+    border-radius: 100%;
+    background: rgba(155, 155, 155, 0.22);
+  }
+  .page .search-search button i {
+    font-size: 15px;
+    color: rgba(24, 59, 86, 0.662745098);
+  }
+  .page .search-search input {
+    width: 85%;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding: 7px;
+    background: white;
+    color: #183b56;
+    border-radius: 4px;
+    font-size: 15px;
+  }
+  .page .search-search input::-moz-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .search-search input:-ms-input-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .search-search input::placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .no-query #searchQNo {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    font-size: 15px;
+    padding: 10px 35px;
+    font-weight: 500;
+    z-index: 10000;
+    opacity: 1 !important;
+  }
+  .page .no-query #searchQNo.sticky {
+    position: fixed;
+    top: 0px;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
+  .page .no-query i {
+    color: #06c484;
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  .page .no-query h1 {
+    font-size: 22.5px;
+    color: #183b56;
+    font-weight: 500;
+  }
+  .page .no-query p {
+    color: #183b56;
+    font-size: 15px;
+    opacity: 0.8;
+  }
+  .page .no-query .no-query-search {
+    position: relative;
+    margin-top: 22px;
+    padding: 25px 15px;
+    background: rgba(185, 185, 185, 0.18);
+  }
+  .page .no-query .no-query-search i {
+    position: absolute;
+    font-size: 15px;
+    color: rgba(24, 59, 86, 0.662745098);
+    right: 35px;
+    top: 43px;
+    background: rgb(246, 246, 246);
+    padding: 17px 16px;
+    margin: -17px -16px;
+    padding-top: 18px;
+    margin-top: -18px;
+    border-radius: 4px;
+  }
+  .page .no-query .no-query-search i::before {
+    padding: 7px;
+    margin: -7px;
+    background: rgba(155, 155, 155, 0.22);
+    border-radius: 100%;
+  }
+  .page .no-query .no-query-search input {
+    width: 88%;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding: 7px 17px;
+    background: rgb(246, 246, 246);
+    color: #183b56;
+    border-radius: 4px;
+    font-size: 15px;
+  }
+  .page .no-query .no-query-search input::-moz-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .no-query .no-query-search input:-ms-input-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .no-query .no-query-search input::placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .no-query .no-query-search button {
+    font-size: 14.5px;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    text-align: center;
+    width: 100%;
+    height: 45px;
+    margin-top: 15px;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    font-weight: normal;
+  }
+  .page .search-results {
+    padding-top: 210px;
+  }
+  .page .search-results #searchQYes {
+    position: absolute;
+    top: 135px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    font-size: 15px;
+    padding: 10px 35px;
+    font-weight: 500;
+    z-index: 10000;
+    text-align: left;
+  }
+  .page .search-results #searchQYes.sticky {
+    position: fixed;
+    top: 81px;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
+  .page .search-results .no-results #searchQNo {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    font-size: 15px;
+    padding: 10px 35px;
+    font-weight: 500;
+    z-index: 10000;
+    opacity: 1 !important;
+  }
+  .page .search-results .no-results #searchQNo.sticky {
+    position: fixed;
+    top: 0px;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
+  .page .search-results .no-results i {
+    color: #06c484;
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  .page .search-results .no-results h1 {
+    font-size: 22.5px;
+    color: #183b56;
+    font-weight: 500;
+  }
+  .page .search-results .no-results p {
+    color: #183b56;
+    font-size: 15px;
+    opacity: 0.8;
+  }
+  .page .search-results .no-results .no-results-search {
+    position: relative;
+    margin-top: 22px;
+    padding: 25px 15px;
+    background: rgba(185, 185, 185, 0.18);
+  }
+  .page .search-results .no-results .no-results-search i {
+    position: absolute;
+    font-size: 15px;
+    color: rgba(24, 59, 86, 0.662745098);
+    right: 35px;
+    top: 43px;
+    background: rgb(246, 246, 246);
+    padding: 17px 16px;
+    margin: -17px -16px;
+    padding-top: 18px;
+    margin-top: -18px;
+    border-radius: 4px;
+  }
+  .page .search-results .no-results .no-results-search i::before {
+    padding: 7px;
+    margin: -7px;
+    background: rgba(155, 155, 155, 0.22);
+    border-radius: 100%;
+  }
+  .page .search-results .no-results .no-results-search input {
+    width: 88%;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding: 7px 17px;
+    background: rgb(246, 246, 246);
+    color: #183b56;
+    border-radius: 4px;
+    font-size: 15px;
+  }
+  .page .search-results .no-results .no-results-search input::-moz-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .search-results .no-results .no-results-search input:-ms-input-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .search-results .no-results .no-results-search input::placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .page .search-results .no-results .no-results-search button {
+    font-size: 14.5px;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    text-align: center;
+    width: 100%;
+    height: 45px;
+    margin-top: 15px;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    font-weight: normal;
+  }
+  .page .search-results .services {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .page .search-results .service {
+    flex: 1 auto;
+    flex: 60%;
+    max-width: 197px;
+    height: -webkit-min-content;
+    height: -moz-min-content;
+    height: min-content;
+    padding: 10px;
+    margin: 20px 10px;
+  }
+  .page .search-results .service .service-image {
+    width: 100%;
+    height: 105px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    filter: brightness(90%);
+    border-radius: 4px;
+  }
+  .page .search-results .service .reviews {
+    display: flex;
+    margin-block: 1px;
+    margin-top: 6px;
+  }
+  .page .search-results .service .reviews p {
+    margin-bottom: 0;
+    color: #FFBC55;
+    font-size: 11px;
+    margin-top: 1px;
+  }
+  .page .search-results .service .reviews p i {
+    transform: translateY(-0.9px);
+    margin-right: 3px;
+    font-size: 9px;
+  }
+  .page .search-results .service .reviews span {
+    color: rgb(170, 170, 170);
+    font-size: 10px;
+    transform: translateX(4px) translateY(2px);
+  }
+  .page .search-results .service .name {
+    font-size: 14px;
+    color: #183b56;
+    font-weight: 500;
+    margin-bottom: 1px;
+  }
+  .page .search-results .service .business-name {
+    font-size: 11px;
+    color: #183b56;
+    opacity: 0.7;
+    font-weight: 500;
+  }
+  .page .search-results .service:hover {
+    background: white;
+  }
+  .page .search-results .service:hover .name {
+    text-decoration: underline;
+  }
+  .page .search-results .service:hover .service-image {
+    transition: 0.2s;
+    filter: brightness(85%);
+  }
 }/*# sourceMappingURL=search.css.map */
