--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -340,3 +340,327 @@ $txt: #183b56;
       }
     }
 }
+
+
+
+@media only screen and (min-device-width: 1140px) {
+  .page{
+    .search-search{
+      position: absolute;
+      top: 55px;
+      width: 100%;
+      padding-inline: 33px;
+      padding-bottom: 15px;
+      padding-top: 15px;
+      text-align: center;
+      border-bottom: 1px solid rgba(40,40,40,0.1);
+      z-index: 10000;
+      background: white;
+      &.sticky{
+          position: fixed;
+          top: 0;
+          box-shadow: 0 0 4px rgba(5,5,5,0.12);
+      }
+      form{
+          border: 1px solid rgb(234,234,234);
+          border-radius: 4px;
+          display: flex;
+          max-width: 500px;
+          position: relative;
+      }
+      button{
+          border: none;
+          background: transparent;
+          position: absolute;
+          right: 20px;
+          top: 13px;
+          padding: 3px 8px;
+          margin: -3px -8px;
+          border-radius: 100%;
+          background: rgba(155, 155, 155, 0.22);
+          i{
+              font-size: 15px;
+              color: #183b56a9;
+          }
+      }
+      input{
+        width: 85%;
+        height: 50px;
+        border: none;
+        outline: none;
+        padding: 7px;
+        background: white;
+        color: $txt;
+        border-radius: 4px;
+        font-size: 15px;
+        &::placeholder{
+          color: $txt;
+          opacity: 0.8;
+        }
+      }
+    }
+    .no-query{
+      #searchQNo{
+        position: absolute;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        height: auto;
+        background: $primBtn;
+        color: $white;
+        font-size: 15px;
+        padding: 10px 35px;
+        font-weight: 500;
+        z-index: 10000;
+        opacity: 1 !important;
+        &.sticky{
+          position: fixed;
+          top: 0px;
+          box-shadow: 0 0 4px rgba(5,5,5,0.12);
+        }
+       }
+       i{
+        color: $primBtn;
+        font-size: 40px;
+        margin-bottom: 10px;
+      }
+      h1{
+        font-size: 22.5px;
+        color: $txt;
+        font-weight: 500;
+      }
+      p{
+          color: $txt;
+          font-size: 15px;
+          opacity: 0.8;
+        }
+       .no-query-search{
+        position: relative;
+        margin-top: 22px;
+        padding: 25px 15px;
+        background: rgba(185, 185, 185, 0.18);
+        i{
+          position: absolute;
+          font-size: 15px;
+          color: #183b56a9;
+          right: 35px;
+          top: 43px;
+          background: $white;
+          padding: 17px 16px;
+          margin: -17px -16px;
+          padding-top: 18px;
+          margin-top: -18px;
+          border-radius: 4px;
+          &::before{
+            padding: 7px;
+            margin: -7px;
+            background: rgba(155, 155, 155, 0.22);
+            border-radius: 100%;
+          }
+        }
+        input{
+          width: 88%;
+          height: 50px;
+          border: none;
+          outline: none;
+          padding: 7px 17px;
+          background: $white;
+          color: $txt;
+          border-radius: 4px;
+          font-size: 15px;
+          &::placeholder{
+            color: $txt;
+            opacity: 0.8;
+          }
+        }
+        button{
+          font-size: 14.5px;
+          background: $primBtn;
+          color: $white;
+          text-align: center;
+          width: 100%;
+          height: 45px;
+          margin-top: 15px;
+          border-radius: 4px;
+          outline: none;
+          border: none;
+          font-weight: normal;
+        }
+      }
+    }
+    .search-results{
+      padding-top: 210px;
+        #searchQYes{
+          position: absolute;
+          top: 135px;
+          left: 0;
+          width: 100%;
+          height: auto;
+          background: $primBtn;
+          color: $white;
+          font-size: 15px;
+          padding: 10px 35px;
+          font-weight: 500;
+          z-index: 10000;
+          text-align: left;
+          &.sticky{
+            position: fixed;
+            top: calc(136px - 55px);
+            box-shadow: 0 0 4px rgba(5,5,5,0.12);
+          }
+        }
+        .no-results{
+      #searchQNo{
+        position: absolute;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        height: auto;
+        background: $primBtn;
+        color: $white;
+        font-size: 15px;
+        padding: 10px 35px;
+        font-weight: 500;
+        z-index: 10000;
+        opacity: 1 !important;
+        &.sticky{
+          position: fixed;
+          top: 0px;
+          box-shadow: 0 0 4px rgba(5,5,5,0.12);
+        }
+        }
+      i{
+        color: $primBtn;
+        font-size: 40px;
+        margin-bottom: 10px;
+      }
+      h1{
+        font-size: 22.5px;
+        color: $txt;
+        font-weight: 500;
+      }
+      p{
+          color: $txt;
+          font-size: 15px;
+          opacity: 0.8;
+        }
+        .no-results-search{
+          position: relative;
+          margin-top: 22px;
+          padding: 25px 15px;
+          background: rgba(185, 185, 185, 0.18);
+          i{
+            position: absolute;
+            font-size: 15px;
+            color: #183b56a9;
+            right: 35px;
+            top: 43px;
+            background: $white;
+            padding: 17px 16px;
+            margin: -17px -16px;
+            padding-top: 18px;
+            margin-top: -18px;
+            border-radius: 4px;
+            &::before{
+              padding: 7px;
+              margin: -7px;
+              background: rgba(155, 155, 155, 0.22);
+              border-radius: 100%;
+            }
+          }
+          input{
+            width: 88%;
+            height: 50px;
+            border: none;
+            outline: none;
+            padding: 7px 17px;
+            background: $white;
+            color: $txt;
+            border-radius: 4px;
+            font-size: 15px;
+            &::placeholder{
+              color: $txt;
+              opacity: 0.8;
+            }
+          }
+          button{
+            font-size: 14.5px;
+            background: $primBtn;
+            color: $white;
+            text-align: center;
+            width: 100%;
+            height: 45px;
+            margin-top: 15px;
+            border-radius: 4px;
+            outline: none;
+            border: none;
+            font-weight: normal;
+          }
+        }
+        }
+        .services{
+          display: flex;
+          flex-wrap: wrap;
+        }
+        .service{
+          flex: 1 auto;
+          flex: 60%;
+          max-width: 197px;
+          height: min-content;
+          padding: 10px;            
+          margin: 20px 10px;
+          .service-image{
+              width: 100%;
+              height: 105px;
+              object-fit: cover;
+              filter: brightness(90%);
+              border-radius: 4px;
+          }
+          .reviews{
+              display: flex;
+              margin-block: 1px;
+              margin-top: 6px;
+              p{
+              margin-bottom: 0;
+              color: #FFBC55;
+              font-size: 11px;
+              margin-top: 1px;
+              i{
+                  transform: translateY(-0.9px);
+                  margin-right: 3px;
+                  font-size: 9px;
+              }
+              }
+              span{
+              color: rgb(170, 170, 170);
+              font-size: 10px;
+              transform: translateX(4px) translateY(2px);
+              }
+          }
+          .name{
+              font-size: 14px;
+              color: $txt;
+              font-weight: 500;
+              margin-bottom: 1px;
+          }
+          .business-name{
+              font-size: 11px;
+              color: $txt;
+              opacity: 0.7;
+              font-weight: 500;
+          }
+          &:hover{
+              background: white;
+              .name{
+                text-decoration: underline;
+              }
+              .service-image{
+                transition: .2s;
+                filter: brightness(85%);
+              }
+            }
+      }
+      }
+  }
+  
+}
