--- a/static/scss/store/product/category.css
+++ b/static/scss/store/product/category.css
@@ -156,4 +156,154 @@
 .page .categories .service:hover .service-image {
   transition: 0.2s;
   filter: brightness(85%);
+}
+
+@media only screen and (min-device-width: 1140px) {
+  .category-search {
+    position: absolute;
+    top: 55px;
+    width: 100%;
+    padding-inline: 33px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    text-align: center;
+    border-bottom: 1px solid rgba(40, 40, 40, 0.1);
+    z-index: 10000;
+    background: white;
+  }
+  .category-search.sticky {
+    position: fixed;
+    top: 0;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
+  .category-search form {
+    border: 1px solid rgb(234, 234, 234);
+    border-radius: 4px;
+    display: flex;
+    max-width: 500px;
+    position: relative;
+  }
+  .category-search button {
+    border: none;
+    background: transparent;
+    position: absolute;
+    right: 20px;
+    top: 13px;
+    padding: 3px 8px;
+    margin: -3px -8px;
+    border-radius: 100%;
+    background: rgba(155, 155, 155, 0.22);
+  }
+  .category-search button i {
+    font-size: 15px;
+    color: rgba(24, 59, 86, 0.662745098);
+  }
+  .category-search input {
+    width: 85%;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding: 7px;
+    background: white;
+    color: #183b56;
+    border-radius: 4px;
+    font-size: 15px;
+  }
+  .category-search input::-moz-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .category-search input:-ms-input-placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .category-search input::placeholder {
+    color: #183b56;
+    opacity: 0.8;
+  }
+  .category-q {
+    position: absolute;
+    top: 135px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background: #06c484;
+    color: rgb(246, 246, 246);
+    font-size: 15px;
+    padding: 10px 35px;
+    font-weight: 500;
+    z-index: 10000;
+    text-align: left;
+  }
+  .category-q.sticky {
+    position: fixed;
+    top: 81px;
+    box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  }
+  .page .categories {
+    padding-top: 195px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .page .categories .service {
+    flex: 1 auto;
+    flex: 60%;
+    max-width: 197px;
+    height: -webkit-min-content;
+    height: -moz-min-content;
+    height: min-content;
+    padding: 10px;
+    margin: 20px 10px;
+  }
+  .page .categories .service .service-image {
+    width: 100%;
+    height: 105px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    filter: brightness(90%);
+    border-radius: 4px;
+  }
+  .page .categories .service .reviews {
+    display: flex;
+    margin-block: 1px;
+    margin-top: 6px;
+  }
+  .page .categories .service .reviews p {
+    margin-bottom: 0;
+    color: #FFBC55;
+    font-size: 11px;
+    margin-top: 1px;
+  }
+  .page .categories .service .reviews p i {
+    transform: translateY(-0.9px);
+    margin-right: 3px;
+    font-size: 9px;
+  }
+  .page .categories .service .reviews span {
+    color: rgb(170, 170, 170);
+    font-size: 10px;
+    transform: translateX(4px) translateY(2px);
+  }
+  .page .categories .service .name {
+    font-size: 14px;
+    color: #183b56;
+    font-weight: 500;
+    margin-bottom: 1px;
+  }
+  .page .categories .service .business-name {
+    font-size: 11px;
+    color: #183b56;
+    opacity: 0.7;
+    font-weight: 500;
+  }
+  .page .categories .service:hover {
+    background: white;
+  }
+  .page .categories .service:hover .name {
+    text-decoration: underline;
+  }
+  .page .categories .service:hover .service-image {
+    transition: 0.2s;
+    filter: brightness(85%);
+  }
 }/*# sourceMappingURL=category.css.map */
