--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -249,6 +249,9 @@ $txt: #183b56;
             }
             #map{
                 margin-top: 18px;
+                width: 100%;
+                height: 300px;
+                max-width: 760px;
             }
         }
         .opening-hours{
@@ -260,13 +263,14 @@ $txt: #183b56;
                 font-weight: 500;
             }
             .card{
-                background: rgba(241,241,241,0.98);
+                background: rgba(238,238,241,0.98);
                 width: 100%;
                 height: auto;
                 border-radius: 4px;
                 padding: 13px 33px;
                 border: none;
                 margin-top: 15px;
+                max-width: 390px;
                 .day{
                     display: flex;
                     justify-content: space-between;
@@ -367,7 +371,6 @@ $txt: #183b56;
                 width: max-content;
             }
             .add-review-btn{
-                margin-block: 10px;
                 width: 100%;
                 color: $white;
                 background: $primBtn;
@@ -376,6 +379,8 @@ $txt: #183b56;
                 outline: none;
                 border: none;
                 border-radius: 4px;
+                max-width: 350px;
+                margin: 10px auto;
             }
             .add-review-txt{
                 text-align: center;
@@ -529,3 +534,492 @@ $txt: #183b56;
         }
     }
 }
+
+
+
+@media only screen and (min-device-width: 1140px) {
+    .product-search{
+        position: absolute;
+        top: 55px;
+        width: 100%;
+        padding-inline: 33px;
+        padding-bottom: 15px;
+        padding-top: 15px;
+        text-align: center;
+        border-bottom: 1px solid rgba(40,40,40,0.1);
+        z-index: 10000;
+        background: white;
+        &.sticky{
+            position: fixed;
+            top: 0;
+            box-shadow: 0 0 4px rgba(5,5,5,0.12);
+        }
+        form{
+            border: 1px solid rgb(234,234,234);
+            border-radius: 4px;
+            display: flex;
+            max-width: 500px;
+            position: relative;
+        }
+        button{
+            border: none;
+            background: transparent;
+            position: absolute;
+            right: 20px;
+            top: 13px;
+            padding: 3px 8px;
+            margin: -3px -8px;
+            border-radius: 100%;
+            background: rgba(155, 155, 155, 0.22);
+            i{
+                font-size: 15px;
+                color: #183b56a9;
+            }
+        }
+        input{
+          width: 85%;
+          height: 50px;
+          border: none;
+          outline: none;
+          padding: 7px;
+          background: white;
+          color: $txt;
+          border-radius: 4px;
+          font-size: 15px;
+          &::placeholder{
+            color: $txt;
+            opacity: 0.8;
+          }
+        }
+    }
+    .product-section{
+        .quick-links{
+            background: $primBtn;
+            height: 52px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            padding-inline: 35px;
+            position: absolute;
+            &.sticky{
+                position: fixed;
+                top: 78px;
+                z-index: 10000;
+            }
+            a{
+                padding-inline: 5px;
+                margin-inline: 3px;
+                font-size: 15px;
+                color: $white;
+                text-decoration: none;
+                opacity: 0.64;
+                font-weight: 500;
+                cursor: pointer;
+                &.active{
+                    opacity: 1;
+                }
+                &:hover{
+                    color: $white;
+                    opacity: 9;
+                }
+                &:first-child{
+                    padding-left: 0;
+                    margin-left: 0;
+                }
+                &:last-child{
+                    padding-right: 0;
+                    margin-right: 0;
+                }
+            }
+        }
+        .product-image{
+            width: 100%;
+            height: 380px;
+            object-fit: cover;
+            filter: brightness(75%);
+        }
+        .text{
+            margin-top: 10px;
+            padding-inline: 35px;
+            &.main{
+                padding-top: 58px;
+            }
+            .reviews{
+                display: flex;
+                margin-block: 3px;
+                p{
+                  margin-bottom: 0;
+                  color: #FFBC55;
+                  font-size: 12px;
+                  margin-top: 1px;
+                  i{
+                    transform: translateY(-0.9px);
+                    margin-right: 3px;
+                    font-size: 11px;
+                  }
+                }
+                span{
+                  color: rgb(170, 170, 170);
+                  font-size: 11px;
+                  transform: translateX(4px) translateY(2px);
+                }
+              }
+            .name{
+                font-size: 28px;
+                color: $txt;
+                font-weight: 500;
+            }
+            .business-name{
+                font-size: 13px;
+                color: $txt;
+                opacity: 0.7;
+                font-weight: 500;
+                width: max-content;
+                padding: 5px;
+                margin: -2px;
+                transform: translateY(4px);
+                background: rgba(110,110,110,0.1);
+                border-radius: 4px;
+                i{
+                    font-size: 12px;
+                    margin-right: 6px;
+                }
+            }
+        }
+        #infoSec{ 
+            display: block;
+            &.hidden{
+                display: none;
+            }
+            &.active{
+                display: block;
+            }
+            .info{
+                    margin-top: 38px;
+                    h1{
+                        font-size: 23px;
+                        color: $txt;
+                    font-weight: 500;
+                }
+                p{
+                    color: $txt;
+                    font-size: 16px;
+                    opacity: 0.8;
+                }
+            }
+            .location{
+                margin-top: 0;
+                padding-inline: 35px;
+                h1{
+                    font-size: 23px;
+                    color: $txt;
+                    font-weight: 500;
+                    margin-bottom: 3px;
+                }
+                p{
+                    margin-left: 1px;
+                    color: $txt;
+                    font-size: 13px;
+                    opacity: 0.8;
+                }
+                #map{
+                    margin-top: 18px;
+                    height: 440px;
+                }
+            }
+            .opening-hours{
+                margin-top: 0;
+                padding-inline: 35px;
+                h1{
+                    font-size: 23px;
+                    color: $txt;
+                    font-weight: 500;
+                }
+                .card{
+                    background: rgba(241,241,241,0.98);
+                    width: 100%;
+                    height: auto;
+                    border-radius: 4px;
+                    padding: 13px 33px;
+                    border: none;
+                    margin-top: 15px;
+                    .day{
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        p{
+                            color: $txt;
+                            font-size: 14px;
+                            opacity: 0.9;
+                            margin: 0;
+                        }
+                        &:first-child{
+                            margin-top: 0;
+                        }
+                        &:last-child{
+                            margin-bottom: 0;
+                        }
+                        &:first-child{
+                            margin-top: 0;
+                        }
+                    }
+                }
+            }
+            .otherpr{
+                margin-top: 0;
+                padding-inline: 18px;
+                h1{
+                    font-size: 22.5px;
+                    color: $txt;
+                    font-weight: 500;
+                }
+                p{
+                    color: $txt;
+                    font-size: 15px;
+                    opacity: 0.8;
+                }
+                .alert{
+                    margin-top: 10px;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 100%;
+                    max-width: 420px;
+                    height: auto;
+                    padding: 10px;
+                    height: 75px;
+                    background: $primBtn;
+                    border-radius: 4px;
+                    .alert-one{
+                        width: max-content;
+                        color: $white;
+                        background: #05a36e;
+                        font-size: 15px;
+                        padding: 12px;
+                        border-radius: 25px;
+                        position: absolute;
+                        left: 12px;
+                    }
+                    .alert-two{
+                        width: max-content;
+                        color: $white;
+                        font-size: 16px;
+                        font-weight: 500;
+                        padding-left: 145px;
+                    }
+                }
+            }
+        }
+        #reviewsSec{
+            display: none;
+            &.active{
+                display: block;
+            }
+            &.hidden{
+                display: none;
+            }
+            .reviews{
+                margin-top: 38px;
+                h1{
+                    font-size: 22.5px;
+                    color: $txt;
+                    font-weight: 500;
+                    margin-bottom: 3px;
+                }
+                p{
+                    color: $txt;
+                    font-size: 15px;
+                    opacity: 0.8;
+                }
+                .no-reviews{
+                    margin-top: 3px;
+                    margin-bottom: 10px;
+                    opacity: 1;
+                    font-size: 17px;
+                    border-left: 10px solid $primBtn;
+                    padding-left: 10px;
+                    padding-right: 5px;
+                    background: rgba(190,190,190,0.1);
+                    width: max-content;
+                }
+                .add-review-btn{
+                    width: 100%;
+                    color: $white;
+                    background: $primBtn;
+                    text-align: center;
+                    padding: 9px 5px;
+                    outline: none;
+                    border: none;
+                    border-radius: 4px;
+                    margin: auto;
+                    position: relative;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    margin-top: 35px;
+                }
+                .add-review-txt{
+                    text-align: center;
+                    max-width: 350px;
+                    margin: 6px auto;
+                }
+                .flex{
+                    display: flex;
+                    width: 100%;
+                    position: relative;
+                    flex-wrap: wrap;
+                }
+                #reviewCard{
+                    width: 100%;
+                    height: max-content;
+                    background: white;
+                    padding: 11px;
+                    border-radius: 4px;
+                    margin-right: 20px;
+                    min-width: 360px;
+                    max-width: 360px;
+                    margin-block: 10px;
+                    &:first-child{
+                        margin-left: 0;
+                        margin-top: 10px;
+                    }
+                    &:last-child{
+                        margin-bottom: 0;
+                    }
+                    .title{
+                        font-size: 17px;
+                        margin-bottom: 3px;
+                    }
+                    .date{
+                        font-size: 13px;
+                        opacity: 0.7;
+                        margin-bottom: 9px;
+                    }
+                    .stars{
+                        display: flex;
+                        margin-block: 3px;
+                        p{
+                          margin-bottom: 0;
+                          color: #FFBC55;
+                          font-size: 12px;
+                          margin-top: 1px;
+                          i{
+                            transform: translateY(-0.9px);
+                            margin-right: 3px;
+                            font-size: 11px;
+                          }
+                        }
+                    }
+                    .content{
+                        font-size: 14px;
+                        margin-bottom: 0;
+                        opacity: 0.9;
+                    }
+                    .conf{
+                        opacity: 0.8;
+                        color: $primBtn;
+                        font-size: 11px;
+                        i{
+                            margin-right: 6px;
+                        }
+                    }
+                }
+            }
+            #productMakeReview{
+                margin-block: 15px;
+                margin-top: 20px;
+                text-align: left;
+                display: none;
+                border-top: 1px solid rgba(0,0,0,0.1);
+                padding-top: 16px;
+                label{
+                    color: $txt;
+                    font-size: 15px;
+                    opacity: 0.95;
+                }
+                input{
+                    width: 100%;
+                    height: 45px;
+                    border: 0;
+                    outline: 0;
+                    border-radius: 4px;
+                    padding: 10px;
+                    color: $txt;
+                    font-size: 14px;
+                    opacity: 0.95;
+                    border: 1px solid rgba(100,100,100,0.1);
+                    &::placeholder{
+                        color: $txt;
+                        font-size: 14px;
+                        opacity: 0.66;
+                    }
+                }
+                textarea{
+                    width: 100%;
+                    min-height: 90px;
+                    height: 90px;
+                    max-height: 140px;
+                    border: 0;
+                    outline: 0;
+                    border-radius: 4px;
+                    padding: 10px;
+                    color: $txt;
+                    font-size: 14px;
+                    opacity: 0.95;
+                    border: 1px solid rgba(100,100,100,0.1);
+                    &::placeholder{
+                        color: $txt;
+                        font-size: 14px;
+                        opacity: 0.66;
+                    }
+                }
+                button{
+                    width: 100%;
+                    background: $primBtn;
+                    color: $white;
+                    height: 45px;
+                    outline: none;
+                    border: none;
+                    border-radius: 4px;
+                    font-weight: 400;
+                }
+                i{
+                    margin: 5px 6px;
+                    font-size: 18px;
+                    color: #FFBC55;
+                    &:first-child{
+                        margin-left: 0;
+                    }
+                }
+            }
+        }
+        #contactSec{
+            display: none;
+            &.hidden{
+                display: none;
+            }
+            &.active{
+                display: block;
+            }
+            .contact{
+                margin-top: 38px;
+                h1{
+                    font-size: 22.5px;
+                    color: $txt;
+                    font-weight: 500;
+                }
+                p{
+                    color: $txt;
+                    font-size: 15px;
+                    opacity: 0.8;
+                }
+                a{
+                    font-size: 15px;
+                    opacity: 0.8;
+                    text-decoration: underline;
+                    cursor: pointer;
+                    color: #007bff;
+                }
+            }
+        }
+    }
+}    
